# PackageConfig.cmake

./: .gitignore  README.md
iniparser/: CMakeLists.txt  README.md  iniparserConfig.cmake  iniparserConfig.cmake.in  iniparserConfigVersion.cmake  iniparserConfigVersion.cmake.in
iniparser/inc/: ini_conf.h
iniparser/src/: ini_conf.c
test/: CMakeLists.txt  main.c  test.ini
